[package]
name = "rotion-raw"
version = "0.0.0"
license = "MIT OR Apache-2.0"
description = "Types for Notion API"
authors = ["Kitsu <mail@kitsu.me>"]
repository = "https://github.com/l4l/rotion"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = { version = "0.99.14", features = ["deref"] }
serde = { version = "1.0.126", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.64"

[features]
derive_debug = []
