[package]
name = "rotion"
version = "0.0.0"
license = "MIT OR Apache-2.0"
description = "Notion API client library"
authors = ["Kitsu <mail@kitsu.me>"]
repository = "https://github.com/l4l/rotion"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
